Update Croissant Kingdom Project.html

--- a/Croissant Kingdom Project.html
+++ b/Croissant Kingdom Project.html
@@ -106,6 +106,7 @@
                 </article>
                 <br><hr/>
             </div>
+        <!--Plce the orders sections-->
             <section id="order-form">
                 <h2>Place Your Order</h2>
                     <form>
@@ -144,6 +145,7 @@
                                 <input type="checkbox" id="toasted croissant"><br>
                                     <textarea id="toasted croissant" row="7" cols="42" placeholder="Special Request here"></textarea>
                         <br><br>
+                <!--Add ons and Etras section-->
                         <p>Add-ons</p>
                         <label for="Extras"> Avocado <i>$1.00</i> </label>
                             <input type="checkbox" id="Extras"><br>
