Croissant Kingdom Project.html

--- a/Croissant Kingdom Project.html
+++ b/Croissant Kingdom Project.html
@@ -4,10 +4,10 @@
         <!-- Name of the Restaurant-->
         <title>The Croissant Kingdom</title>
         <!-- Styling of the page to do at the end --> 
-        <style>
-        body{ 
+           body{ 
             background-color: #c1640092;
             font-family:'Times New Roman', Times, serif;
+            font-size: 20px
         }
         h1{
             text-align: center;
@@ -25,6 +25,9 @@
             border: 5px solid#ffffff; 
             border-radius: 10px;
             width: 300px;
+        }
+        p{
+            font-size: 18px
         }
         
         </style>
